Fix Table Dark mode

--- a/resources/sass/dark.scss
+++ b/resources/sass/dark.scss
@@ -44,4 +44,7 @@
     .menu-selected {
         background-color: #5396e7 !important;
     }
+    .table {
+        --bs-table-bg: #22254D;
+    }
 }
